musica (2.2) unreleased; urgency=low

  * index.php: support https protocol

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 19 May 2010 11:44:19 -0500

musica (2.1-0ubuntu1) maverick; urgency=low

  * index.php: handle files that have multiple dots in the filename

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 19 May 2010 11:44:13 -0500

musica (2.0-0ubuntu1) maverick; urgency=low

  Add jPlayer (GPLv3) as an embedded javascript/flash mp3 player
  * debian/control, debian/install, debian/rules, index.php,
    jplayer.php, jplayer/js/Jplayer.as, jplayer/js/jquery.jplayer.min.js,
    jplayer/skin/jplayer.blue.monday.css: LP: #555347
  * debian/copyright: updated license info

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 18 May 2010 12:00:12 -0500

musica (1.11-0ubuntu1) lucid; urgency=low

  * debian/postrm: dissite and rm etc config

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 19:02:42 -0600

musica (1.10) lucid; urgency=low

  * debian/postrm: safely clean up

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 12:19:35 -0600

musica (1.9) lucid; urgency=low

  * debian/postinst: cache no longer used
  * debian/postrm: clean up link and statistics

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 12:14:54 -0600

musica (1.8) lucid; urgency=low

  * debian/cron.hourly, debian/rules:
    - maintain an hourly updated list of artists/albums/songs, for
      more efficient and secure printing of statists and doing searches
  * debian/rules: drop debconf stuff, as it's not used
  * index.php:
    - read statistics from file
    - no border on images
    - don't hide permission denied errors
  * debian/dirs, debian/postrm: clean up cache and lib dirs on purge
  * debian/links, debian/postinst, debian/rules: improve install/config

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 06 Feb 2010 22:26:23 -0600

musica (1.7) lucid; urgency=low

  * index.php:
    - s/Music/Musica/