@@ -1,6 +1,8 @@
 musica (2.2) unreleased; urgency=low
 
   * index.php: support https protocol
+  * index.php, jplayer.php, jplayer/skin/jplayer.blue.monday.css:
+    - rearrange the player's css to make it a little less wide
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 19 May 2010 11:44:19 -0500
 
